// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cross-framework snapshots > generates stable snapshots for Button 1`] = `
[
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate button\` to regenerate
import * as React from "react";
import { cn } from "../utils/cn.js";

export interface ButtonProps extends React.ButtonHTMLAttributes<HTMLButtonElement> {
  disabled?: boolean;
  /** Variant: size */
  size?: "default" | "sm" | "lg";
  /** Variant: variant */
  variant?: "default" | "outline";
  /** Accessibility attribute: aria-disabled */
  aria-disabled?: string;
}

const Button = React.forwardRef<HTMLButtonElement, ButtonProps>(
  function Button(
    {
  disabled = false,
  size = "default",
  variant = "default",
      className,
      ...props
    },
    ref
  ) {
    return (
      <button
        ref={ref} role="button"
        data-variant={variant !== undefined ? variant : undefined}
        data-size={size !== undefined ? size : undefined}
        className={cn("button", className)}
        {...props}
      />
    );
  }
);
Button.displayName = "Button";

export { Button };
",
        "path": "button/Button.tsx",
      },
    ],
    "framework": "react",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate button\` to regenerate -->
<script setup lang="ts">
import { computed, useAttrs } from "vue";

defineOptions({ name: "Button" });

interface ButtonProps {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  disabled?: boolean;
  /** Variant: size */
  size?: "default" | "sm" | "lg";
  /** Variant: variant */
  variant?: "default" | "outline";
  class?: string;
}

const props = withDefaults(defineProps<ButtonProps>(), {
  disabled: false,
  size: "default",
  variant: "default",
});

const emit = defineEmits<{
  (event: "click", value: MouseEvent): void;
}>();

const attrs = useAttrs();
const className = computed(() => ["button", props.class]);

function handleClick(event: MouseEvent): void {
  emit("click", event);
}
</script>

<template>
  <button
  role="button"
  :data-variant="props.variant"
  :data-size="props.size"
  :aria-disabled="props["aria-disabled"]"
    :class="className"
    v-bind="attrs"
    @click="handleClick"
  >
    <slot />
  </button>
</template>
",
        "path": "button/Button.vue",
      },
    ],
    "framework": "vue",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate button\` to regenerate -->
<script lang="ts">
  interface Props {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  disabled?: boolean;
  /** Variant: size */
  size?: "default" | "sm" | "lg";
  /** Variant: variant */
  variant?: "default" | "outline";
    class?: string;
  }

  let props: Props = $props();
  let className = $derived(["button", props.class].filter(Boolean).join(" "));
</script>

<button
  role="button"
  data-variant={props.variant}
  data-size={props.size}
  {aria-disabled}={props["aria-disabled"]}
  class={className}
>
  <slot />
</button>
",
        "path": "button/button.svelte",
      },
    ],
    "framework": "svelte",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate button\` to regenerate
import { Component, Input } from "@angular/core";

@Component({
  selector: "foundry-button",
  standalone: true,
  template: \`
    <div class="button">
      <ng-content />
    </div>
  \`,
})
export class ButtonComponent {
  @Input() disabled?: boolean = false;
  @Input() size?: "default" | "sm" | "lg" = "default";
  @Input() variant?: "default" | "outline" = "default";
}
",
        "path": "button/button.component.ts",
      },
    ],
    "framework": "angular",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate button\` to regenerate
import { LitElement, html } from "lit";
import { customElement, property } from "lit/decorators.js";

@customElement("foundry-button")
export class ButtonElement extends LitElement {
  @property({ attribute: "aria-disabled" }) "aria-disabled"!: string;
  @property({ attribute: "disabled" }) "disabled"!: boolean = false;
  @property({ attribute: "size" }) "size"!: "default" | "sm" | "lg" = "default";
  @property({ attribute: "variant" }) "variant"!: "default" | "outline" = "default";

  override render() {
    return html\`
      <button
      role="button"
      data-variant="\${this["variant"] ?? ""}"
      data-size="\${this["size"] ?? ""}"
      aria-disabled="\${this["aria-disabled"] ?? ""}"
      >
        <slot></slot>
      </button>
    \`;
  }
}

declare global {
  interface HTMLElementTagNameMap {
    "foundry-button": ButtonElement;
  }
}
",
        "path": "button/foundry-button.ts",
      },
    ],
    "framework": "lit",
  },
]
`;

exports[`cross-framework snapshots > generates stable snapshots for Card 1`] = `
[
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate card\` to regenerate
import * as React from "react";
import { cn } from "../utils/cn.js";

export interface CardProps extends React.HTMLAttributes<HTMLDivElement> {
  elevated?: boolean;
  /** Variant: tone */
  tone?: "default" | "muted";
}

const Card = React.forwardRef<HTMLDivElement, CardProps>(
  function Card(
    {
  elevated = false,
  tone = "default",
      className,
      ...props
    },
    ref
  ) {
    return (
      <div
        ref={ref}
        data-tone={tone !== undefined ? tone : undefined}
        className={cn("card", className)}
        {...props}
      />
    );
  }
);
Card.displayName = "Card";

export { Card };
",
        "path": "card/Card.tsx",
      },
    ],
    "framework": "react",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate card\` to regenerate -->
<script setup lang="ts">
import { computed, useAttrs } from "vue";

defineOptions({ name: "Card" });

interface CardProps {
  elevated?: boolean;
  /** Variant: tone */
  tone?: "default" | "muted";
  class?: string;
}

const props = withDefaults(defineProps<CardProps>(), {
  elevated: false,
  tone: "default",
});

const emit = defineEmits<{
  (event: "click", value: MouseEvent): void;
}>();

const attrs = useAttrs();
const className = computed(() => ["card", props.class]);

function handleClick(event: MouseEvent): void {
  emit("click", event);
}
</script>

<template>
  <div
  :data-tone="props.tone"

    :class="className"
    v-bind="attrs"
    @click="handleClick"
  >
    <slot />
  </div>
</template>
",
        "path": "card/Card.vue",
      },
    ],
    "framework": "vue",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate card\` to regenerate -->
<script lang="ts">
  interface Props {
  elevated?: boolean;
  /** Variant: tone */
  tone?: "default" | "muted";
    class?: string;
  }

  let props: Props = $props();
  let className = $derived(["card", props.class].filter(Boolean).join(" "));
</script>

<div
  data-tone={props.tone}

  class={className}
>
  <slot />
</div>
",
        "path": "card/card.svelte",
      },
    ],
    "framework": "svelte",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate card\` to regenerate
import { Component, Input } from "@angular/core";

@Component({
  selector: "foundry-card",
  standalone: true,
  template: \`
    <div class="card">
      <ng-content />
    </div>
  \`,
})
export class CardComponent {
  @Input() elevated?: boolean = false;
  @Input() tone?: "default" | "muted" = "default";
}
",
        "path": "card/card.component.ts",
      },
    ],
    "framework": "angular",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate card\` to regenerate
import { LitElement, html } from "lit";
import { customElement, property } from "lit/decorators.js";

@customElement("foundry-card")
export class CardElement extends LitElement {
  @property({ attribute: "elevated" }) "elevated"!: boolean = false;
  @property({ attribute: "tone" }) "tone"!: "default" | "muted" = "default";

  override render() {
    return html\`
      <div
      data-tone="\${this["tone"] ?? ""}"

      >
        <slot></slot>
      </div>
    \`;
  }
}

declare global {
  interface HTMLElementTagNameMap {
    "foundry-card": CardElement;
  }
}
",
        "path": "card/foundry-card.ts",
      },
    ],
    "framework": "lit",
  },
]
`;

exports[`cross-framework snapshots > generates stable snapshots for Input 1`] = `
[
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate input\` to regenerate
import * as React from "react";
import { cn } from "../utils/cn.js";

export interface InputProps extends React.InputHTMLAttributes<HTMLInputElement> {
  disabled?: boolean;
  placeholder?: string;
  /** Accessibility attribute: aria-disabled */
  aria-disabled?: string;
}

const Input = React.forwardRef<HTMLInputElement, InputProps>(
  function Input(
    {
  disabled = false,
  placeholder = "",
      className,
      ...props
    },
    ref
  ) {
    return (
      <input
        ref={ref} role="textbox"

        className={cn("input", className)}
        {...props}
      />
    );
  }
);
Input.displayName = "Input";

export { Input };
",
        "path": "input/Input.tsx",
      },
    ],
    "framework": "react",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate input\` to regenerate -->
<script setup lang="ts">
import { computed, useAttrs } from "vue";

defineOptions({ name: "Input" });

interface InputProps {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  disabled?: boolean;
  placeholder?: string;
  class?: string;
}

const props = withDefaults(defineProps<InputProps>(), {
  disabled: false,
  placeholder: "",
});

const emit = defineEmits<{
  (event: "click", value: MouseEvent): void;
}>();

const attrs = useAttrs();
const className = computed(() => ["input", props.class]);

function handleClick(event: MouseEvent): void {
  emit("click", event);
}
</script>

<template>
  <input
  role="textbox"

  :aria-disabled="props["aria-disabled"]"
    :class="className"
    v-bind="attrs"
    @click="handleClick"
  >
    <slot />
  </input>
</template>
",
        "path": "input/Input.vue",
      },
    ],
    "framework": "vue",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate input\` to regenerate -->
<script lang="ts">
  interface Props {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  disabled?: boolean;
  placeholder?: string;
    class?: string;
  }

  let props: Props = $props();
  let className = $derived(["input", props.class].filter(Boolean).join(" "));
</script>

<input
  role="textbox"

  {aria-disabled}={props["aria-disabled"]}
  class={className}
>
  <slot />
</input>
",
        "path": "input/input.svelte",
      },
    ],
    "framework": "svelte",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate input\` to regenerate
import { Component, Input } from "@angular/core";

@Component({
  selector: "foundry-input",
  standalone: true,
  template: \`
    <div class="input">
      <ng-content />
    </div>
  \`,
})
export class InputComponent {
  @Input() disabled?: boolean = false;
  @Input() placeholder?: string = "";
}
",
        "path": "input/input.component.ts",
      },
    ],
    "framework": "angular",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate input\` to regenerate
import { LitElement, html } from "lit";
import { customElement, property } from "lit/decorators.js";

@customElement("foundry-input")
export class InputElement extends LitElement {
  @property({ attribute: "aria-disabled" }) "aria-disabled"!: string;
  @property({ attribute: "disabled" }) "disabled"!: boolean = false;
  @property({ attribute: "placeholder" }) "placeholder"!: string = "";

  override render() {
    return html\`
      <input
      role="textbox"

      aria-disabled="\${this["aria-disabled"] ?? ""}"
      >
        <slot></slot>
      </input>
    \`;
  }
}

declare global {
  interface HTMLElementTagNameMap {
    "foundry-input": InputElement;
  }
}
",
        "path": "input/foundry-input.ts",
      },
    ],
    "framework": "lit",
  },
]
`;
